--- a/Musicon/style.css
+++ b/Musicon/style.css
@@ -5,7 +5,7 @@
 
 body {
   font-family: Helvetica, sans-serif;
-	background: url("https://s3.amazonaws.com/codecademy-content/courses/learn-handlebars/musicon/musicon_bg.png") no-repeat center center fixed;
+	background: url("musicon_bg.png") no-repeat center center fixed;
   background-size: cover;
 }
 
@@ -26,7 +26,8 @@ header {
 }
 
 .container {
-
+  width: 90%;
+  margin: 0 auto;
 }
 
 .branding {
@@ -62,7 +63,10 @@ nav {
 /* Home Page Rulesets */
 
 #introduction {
-
+  width:90%;
+  margin: 0 auto;
+  margin-top:15%;
+  margin-bottom:50%;
 }
 
 #introduction h1 {
@@ -83,6 +87,7 @@ nav {
   color: #ffffff;
   background-color: #4c7ef3;
   border-radius: 4px;
+  text-align: center;
 }
 
 #introduction a:hover {
@@ -99,6 +104,11 @@ nav {
 .instrument {
   width: 90%;
   overflow: auto;
+  opacity:0.9;
+  background-color:white;
+  padding: 2% 5%;
+  margin: 2% auto;
+  border-radius: 5px;
 
 }
 
